Tue Nov  7 11:39:26 2000  Gray Watson  <gray@whopper.be.256.com>

	* Made log-unknown the default and depreciated the token.  Added a
	log-known token to _only_ report on known (file/line) memory.

	* Removed INSTALL.1 file because it was basically empty.

	* Added Troubleshooting section to the INSTALL manual.

Tue Oct 10 19:03:14 2000  Gray Watson  <gray@whopper.be.256.com>

	* Releasing dmalloc version 4.7.2 with just the ident
 	autoconfigure handling for VA Linux release.  Thanks guys.

	* Reorged dmalloc.h.3.  Ugh.

	* malloc_verify and dmalloc_verify now return
 	[D]MALLOC_VERIFY_[NO]ERROR.

	* dmalloc_debug now takes an unsigned-int flags and returns the
 	old debug flag value.  debug_current now returns an unsigned int
 	flag value.

	* Added autoconfig handling of #ident.  I really hate Unix
	sometimes for its blatant disregard for anything approaching a
	standard.  Idiots.

Wed Sep 13 14:24:46 2000  Gray Watson  <gray@256.com>

	* Fixed a bug in chunk.c found by Ian Badcoe.

	* Improved the displaying of tokens my dmalloc utility.

Tue Jul 25 11:57:49 2000  Gray Watson  <gray@256.com>

	* Releasing dmalloc version 4.7.1.

	* Fixed problem with check-blank being specified but not
	free-blank or alloc-blank.  I thought I fixed this before.

Mon Jul 24 15:30:04 2000  Gray Watson  <gray@256.com>

	* Releasing dmalloc version 4.7.0.

	* Added support for --disable-cxx and --enable-threads for turning
	on or off C++ and thread support.

Fri Jul 21 17:00:25 2000  Gray Watson  <gray@256.com>

	* Added autoconfiguration code to see if the return macros work
	for an architecture.

	* Renamed USE_RET_ADDRESS to USE_RETURN_MACROS in return.h.

	* Added threaded C++ library support to Makefile.

Tue Jun 20 18:30:55 2000  Gray Watson  <gray@256.com>

	* Fixed problems with -p and -m not setting the debug flags.

	* Added 'force-linear' token and depreciated the 'allow-nonlinear'
	token.  Non-linear heaps really are the default these days (on AIX