@@ -18,7 +18,7 @@
  *
  * The author may be contacted via http://www.dmalloc.com/
  *
- * $Id: malloc.h,v 1.33 2000/10/10 23:13:05 gray Exp $
+ * $Id: malloc_funcs.h,v 1.1 2000/11/07 17:33:03 gray Exp $
  */
 
 #ifndef __MALLOC_H__
